# snn1337

./: .gitignore  README.md
Development/GPU/: CMakeLists.txt
Development/GPU/ConvolutionalSNN/: CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  DenseLayer.cpp  DenseLayer.h  InputLayer.cpp  InputLayer.h  InputReader.cpp  InputReader.h  Layer.cpp  Layer.h  Network.cpp  Network.h  NetworkInitializer.cpp  NetworkInitializer.h  PoolLayer.cpp  PoolLayer.h
Development/GPU/ConvolutionalSNN/res/: network
Development/GPU/FullyConnected/: CMakeLists.txt  ClStructHolder.cpp  ClStructHolder.h  FullyConnectedNN.cpp  FullyConnectedNN.h  Layer.cpp  Layer.h  main.cpp  main.cpp.cpp  network_digits  network_xor  neuron.cl
Development/GPU/FullyConnectedSNN/: CMakeLists.txt  ClStructHolder.cpp  ClStructHolder.h  FullyConnectedNN.cpp  FullyConnectedNN.h  InputReader.cpp  InputReader.h  Layer.cpp  Layer.h  NetworkInitializer.cpp  NetworkInitializer.h  Neuron.cpp  Neuron.h  main.cpp  neuron.cl  tests.cl
Development/GPU/FullyConnectedSNN/res/: network  network_test  test1
Development/GPU/Perceptron/: CMakeLists.txt  ClStructHolder.cpp  ClStructHolder.h  InputReader.cpp  InputReader.h  Layer.cpp  batchedNeuron.cl  input_digits  main.cpp  network_digits  network_digits_4_layers  neuron.cl  output_digits
Development/GPU/Perceptron/res/: generate_data.py  network_mnist
Development/GPU/include/: FullyConnectedNN.h  Layer.h  errCode.h  mnist_reader.hpp  mnist_reader_common.hpp
Development/education/task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
Development/education/task1/Cheshear/: CMakeLists.txt  main.cpp
Development/education/task1/SemyonKozloff/: CMakeLists.txt  kernel.cl  main.cpp
Development/education/task1/TheYarick/: CMakeLists.txt
Development/education/task1/annnvl/: CMakeLists.txt
Development/education/task1/demikandr/: CMakeLists.txt
Development/education/task1/egdeliya/: CMakeLists.txt
Development/education/task1/ignorer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ignorer  ignorerKernel.cl  main.cpp  myFirstKernel.cl
Development/education/task1/kitnoel/: CMakeLists.txt  main.cpp  myFirstKernel.cl
Development/education/task1/nmakeenkov/: CMakeLists.txt
Development/education/task1/okalitova/: CMakeLists.txt  main  main.cpp  myFirstKernel.cl
Development/education/task1/yuri-pechatnov/: CMakeLists.txt  enumerate.cl  main.cpp
Development/education/task1/yuri_pechatnov/: CMakeLists.txt  enumerate.cl  main.cpp
Development/education/task1/zuev-stepan/: CMakeLists.txt  kernel.cl  main.cpp
Development/education/task2/: CMakeLists.txt  readme.md
Development/education/task2/Cheshear/: CMakeLists.txt  OpenCLFile1.cl  main.cpp
Development/education/task2/SemyonKozloff/: CMakeLists.txt  kernel.cl  main.cpp  ~$akeLists.txt
Development/education/task2/ignorer/: CMakeLists.txt  ignorerKernel.cl  main.cpp
Development/education/task2/include/: cl.hpp
Development/education/task2/kitnoel/: CMakeLists.txt  kernel.cl  main.cpp
Development/education/task2/okalitova/: CMakeLists.txt  main.cpp  matrixMultiplication.cl  matrixmultiplication.cpp
Development/education/task2/yuri_pechatnov/: CMakeLists.txt  main.cpp  multiply.cl
Development/education/task2/zuev-stepan/: CMakeLists.txt  kernel.cl  main.cpp
Development/education/task3/: readme.md
Development/education/task3/semyonkozlov/: sort.v
Development/education/task3/yuri-pechatnov/: sort.sv  sort5.sv  tb.do  tb.sv
Development/fpga/anneal_spike/: all_tb.do  all_tb.sv  anneal_spike_tb.sv  anneal_tb.do  anneal_tb_without_wave.do  random_lfsr.sv  random_lfsr_tb.do  random_lfsr_tb.sv  run_network_tb.do  run_tb.do  spiking_example_network_anneal.sv  spiking_example_network_tb.sv  spiking_example_tb.sv  spiking_neural_network_xor.sv  spiking_neuron.sv
Development/fpga/anneal_spike_generating/: all_tb.sv  generate_net.py  generate_net_sample_1.py  spiking_neural_network.sv.template  spiking_neuron.sv.template
Development/fpga/perceptron/scripts/: digits_tb_generator.py  rand_tb_generator.py
Development/fpga/perceptron/test/: fcnn_digits_tb.sv  fcnn_rand_tb.sv
Development/fpga/spiking_neuron_simple/: run_network_tb.do  run_tb.do  spiking_example_network_tb.sv  spiking_example_tb.sv  spiking_neural_network_xor.sv  spiking_neuron.sv
Development/fully-connected-nn/: conv_net_generator.py  fcnn_generator.py  fcnn_testbench.sv  fcnn_testbench_digits.sv  layer_generator.py  mist.py  model1337.txt  network_generator.py  neuron_generator.py  sigmoid_net_weights.npz  simple_fcnn.py  testbench_digits.py  testbench_generator.py
Development/fully-connected-nn/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl  _lock
Development/layer/: layer.v  layer_generator.py  network_generator.py
Development/neuron_simple/: example_tb.sv  neural_network_simple_example.sv  neuron_simple_example.sv  run_tb.do
Development/spiking_neuron_simple/: spiking_example_tb.sv  spiking_neuron.sv
Research/SNN/: SNN.ipynb  STDP_test.ipynb  Testing_one_hidden_dense_with_STDP.ipynb  base.py  convlayer.py  denselayer.py  fully_connected_for_mnist.ipynb  inputlayer.py  mnist.py  mnist_test.ipynb  neuron.c  neuron.cpp  neuron.html  neuron.pyx  spikenet.py
Research/SNN/.ipynb_checkpoints/: SNN-checkpoint.ipynb  Untitled-checkpoint.ipynb
Research/SNN/tests/: Simple_test_dense.ipynb  Testing_cnn.ipynb  Testing_dense.ipynb  Untitled.ipynb  cnn_param.txt  cnn_weights.npz  cnn_weights_1.npz  dense_weights.npz  params  params.csv  params.txt  weights.npy  xor.ipynb
Research/SNN/tests/.ipynb_checkpoints/: Testing_cnn-checkpoint.ipynb  Testing_dense-checkpoint.ipynb  Testing_one_hidden_dense-checkpoint.ipynb  xor-checkpoint.ipynb
Research/education/: Nurgalieva_convolution_layers_experiments.ipynb  Nurgalieva_extract_weights_cnn.ipynb  Nurgalieva_extract_weights_dense.ipynb  Nurgalieva_theano_task.ipynb
Research/education/task1/: Readme.md  cifar_cnn.ipynb
Research/education/task1/annnvl/: cifar.py  cifar_cnn.ipynb
codestyle/: astyle.conf  cpplint.py  init  pre-commit
